[gd_scene load_steps=4 format=3 uid="uid://b031ffqlibkfg"]

[ext_resource type="Script" uid="uid://c3vgbxsctnyiy" path="res://scripts/creatures/base_creature.gd" id="1_jsg5w"]
[ext_resource type="Script" uid="uid://bm2ntdm137udv" path="res://scripts/creatures/neutral_creature_detector.gd" id="3_8qau0"]
[ext_resource type="Script" uid="uid://dj0m243dsoot8" path="res://scripts/opponent_detector.gd" id="5_ii4yc"]

[node name="BaseCreature" type="Node2D"]
script = ExtResource("1_jsg5w")

[node name="NeutralCreatureDetector" type="Area2D" parent="."]
collision_mask = 2
monitorable = false
script = ExtResource("3_8qau0")

[node name="OpponentDetector" type="Area2D" parent="."]
collision_mask = 48
monitorable = false
script = ExtResource("5_ii4yc")

[node name="GroupDetectedArea" type="Area2D" parent="."]
collision_layer = 2
monitoring = false

[node name="GroupLabel" type="Label" parent="."]
offset_left = -29.0
offset_top = -66.0
offset_right = 26.0
offset_bottom = -21.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 32
text = "123"

[connection signal="area_entered" from="NeutralCreatureDetector" to="NeutralCreatureDetector" method="_on_area_entered"]
[connection signal="neutral_creature_detected" from="NeutralCreatureDetector" to="." method="_on_neutral_creature_detected"]
[connection signal="area_entered" from="OpponentDetector" to="OpponentDetector" method="_on_area_entered"]
